--- a/cds-helper/cds-helper.csproj
+++ b/cds-helper/cds-helper.csproj
@@ -10,6 +10,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Prism.DryIoc" Version="9.0.537" />
       <PackageReference Include="System.Text.Encoding.CodePages" Version="10.0.0" />
     </ItemGroup>
 
@@ -26,6 +27,10 @@
       <Content Include="대항해시대3-지도(발견물-이름-기준).jpg">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\CdsHelper.Form\CdsHelper.Form.csproj" />
     </ItemGroup>
 
 </Project>
