--- a/cds-helper/cds-helper.csproj
+++ b/cds-helper/cds-helper.csproj
@@ -31,6 +31,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\CdsHelper.Form\CdsHelper.Form.csproj" />
+      <ProjectReference Include="..\CdsHelper.Main\CdsHelper.Main.csproj" />
     </ItemGroup>
 
 </Project>
