좌표 수정 하는 기능 추가

--- a/CdsHelper.Support/CdsHelper.Support.csproj
+++ b/CdsHelper.Support/CdsHelper.Support.csproj
@@ -11,4 +11,8 @@
       <Folder Include="Themes\UI\Units\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\CdsHelper.Api\CdsHelper.Api.csproj" />
+    </ItemGroup>
+
 </Project>
